step 5 complete